got file list working for client

--- a/client/client.vcxproj
+++ b/client/client.vcxproj
@@ -81,6 +81,7 @@
     <ClCompile Include="terminal.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\lib\dirent.h" />
     <ClInclude Include="..\transfer.h" />
     <ClInclude Include="terminal.h" />
   </ItemGroup>
