--- a/client/client.vcxproj.filters
+++ b/client/client.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="terminal.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\lib\dirent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
