--- a/server/server.vcxproj
+++ b/server/server.vcxproj
@@ -77,12 +77,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\transfer.cpp" />
+    <ClCompile Include="server.cpp" />
     <ClCompile Include="ser_tcp.cpp" />
     <ClCompile Include="Thread.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\lib\dirent.h" />
     <ClInclude Include="..\transfer.h" />
+    <ClInclude Include="server.h" />
     <ClInclude Include="Thread.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
